syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example.stockdata.api.spec.model";

message ExceptionResponse {
    string timestamp = 1;
    string message = 2;
    string details = 3;

    enum ExceptionCode {
        UNKNOWN = 0;
        BAD_REQUEST = 1;
        SHARE_DATA_EMPTY = 2;
    }

    ExceptionCode code = 4;
}